--- a/index.html
+++ b/index.html
@@ -125,6 +125,30 @@
           <article>
             <header>
               <h2>
+                <a href="https://github.com/abdshakir37/Python-Projects"
+                  >Python Projects</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://github.com/abdshakir37/Python-Projects"
+              class="image fit"
+              ><img src="/images/python.png" alt=""
+            /></a>
+            <p></p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/abdshakir37/Python-Projects"
+                  class="button"
+                  >View Projects</a
+                >
+              </li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <h2>
                 <a href="https://github.com/abdshakir37/SQL-Projects"
                   >SQL Projects</a
                 >
@@ -153,21 +177,7 @@
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="images/pic04.jpg" alt=""
-            /></a>
-            <p></p>
-            <ul class="actions special">
-              <li><a href="#" class="button">View Projects</a></li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <h2>
-                <a href="#">Machine Learning Projects</a>
-              </h2>
-            </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic05.jpg" alt=""
+              ><img src="/images/excel.png" alt=""
             /></a>
             <p></p>
             <ul class="actions special">
