--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <a
               href="https://github.com/abdshakir37/Power-BI-Projects"
               class="image fit"
-              ><img src="/images/Power_BI.png" alt=""
+              ><img src="images/Power_BI.png" alt=""
             /></a>
             <p></p>
             <ul class="actions special">
@@ -133,7 +133,7 @@
             <a
               href="https://github.com/abdshakir37/Python-Projects"
               class="image fit"
-              ><img src="/images/python.png" alt=""
+              ><img src="images/python.png" alt=""
             /></a>
             <p></p>
             <ul class="actions special">
@@ -177,7 +177,7 @@
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="/images/excel.png" alt=""
+              ><img src="images/excel.png" alt=""
             /></a>
             <p></p>
             <ul class="actions special">
