--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <a
             href="https://github.com/abdshakir37/Python-Projects/blob/main/Movie%20Correlations.ipynb"
             class="image main"
-            ><img src="images/movies.jpg" alt=""
+            ><img src="images/movies.jpg" alt="movies"
           /></a>
           <ul class="actions special">
             <li>
@@ -109,7 +109,7 @@
             <a
               href="https://github.com/abdshakir37/Power-BI-Projects"
               class="image fit"
-              ><img src="images/Power_BI.png" alt=""
+              ><img src="images/Power_BI.png" alt="power-bi-logo"
             /></a>
             <p></p>
             <ul class="actions special">
@@ -133,7 +133,7 @@
             <a
               href="https://github.com/abdshakir37/Python-Projects"
               class="image fit"
-              ><img src="images/python.png" alt=""
+              ><img src="images/python.png" alt="python-logo"
             /></a>
             <p></p>
             <ul class="actions special">
@@ -157,7 +157,7 @@
             <a
               href="https://github.com/abdshakir37/SQL-Projects"
               class="image fit"
-              ><img src="images/Mysql_logo.png" alt=""
+              ><img src="images/Mysql_logo.png" alt="sql-logo"
             /></a>
             <p></p>
             <ul class="actions special">
@@ -177,7 +177,7 @@
               </h2>
             </header>
             <a href="#" class="image fit"
-              ><img src="images/excel.png" alt=""
+              ><img src="images/excel.png" alt="excel-logo"
             /></a>
             <p></p>
             <ul class="actions special">
