--- a/index.html
+++ b/index.html
@@ -101,30 +101,6 @@
           <article>
             <header>
               <h2>
-                <a href="https://github.com/abdshakir37/Power-BI-Projects"
-                  >Power BI Dashboards</a
-                >
-              </h2>
-            </header>
-            <a
-              href="https://github.com/abdshakir37/Power-BI-Projects"
-              class="image fit"
-              ><img src="images/Power_BI.png" alt="power-bi-logo"
-            /></a>
-            <p></p>
-            <ul class="actions special">
-              <li>
-                <a
-                  href="https://github.com/abdshakir37/Power-BI-Projects"
-                  class="button"
-                  >View Projects</a
-                >
-              </li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <h2>
                 <a href="https://github.com/abdshakir37/Python-Projects"
                   >Python Projects</a
                 >
@@ -146,6 +122,57 @@
               </li>
             </ul>
           </article>
+
+          <article>
+            <header>
+              <h2>
+                <a
+                  href="https://public.tableau.com/app/profile/abdus.shakir/vizzes"
+                  >Tableau Projects</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://public.tableau.com/app/profile/abdus.shakir/vizzes"
+              class="image fit"
+              ><img src="images/tab1.png" alt="tableau"
+            /></a>
+            <p></p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://public.tableau.com/app/profile/abdus.shakir/vizzes"
+                  class="button"
+                  >View Projects</a
+                >
+              </li>
+            </ul>
+          </article>
+          <article>
+            <header>
+              <h2>
+                <a href="https://github.com/abdshakir37/Power-BI-Projects"
+                  >Power BI Dashboards</a
+                >
+              </h2>
+            </header>
+            <a
+              href="https://github.com/abdshakir37/Power-BI-Projects"
+              class="image fit"
+              ><img src="images/Power_BI.png" alt="power-bi-logo"
+            /></a>
+            <p></p>
+            <ul class="actions special">
+              <li>
+                <a
+                  href="https://github.com/abdshakir37/Power-BI-Projects"
+                  class="button"
+                  >View Projects</a
+                >
+              </li>
+            </ul>
+          </article>
+
           <article>
             <header>
               <h2>
